# indian-district-court-judgments

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  archive_manager.py  courts.csv  download.py  gs.py  pyproject.toml
mobile/: .gitignore  TRAFFIC_CAPTURE.md  analyze_traffic.py  api_client.py  app.ecourts.gov.in_01-21-2026-02-02-20.yaml  common.py  crypto.py  debug_pdf_flow.py  ecourts_new.apk.idsig  gs.py  main.py  migrate_orders_to_data.py  mykey.jks  pdf_downloader.py  pdf_stage.py  pyproject.toml  requirements.txt  run_scraper.sh  scraper.py  test_api.py  test_captured_pdf.py  test_direct_pdf.py  test_pdf_download.py  test_with_captured_token.py
raw_req_resp/: [716] Request - app.ecourts.gov.in_ecourt_mobile_DC_appReleaseWebService.php.txt  [717] Request - app.ecourts.gov.in_ecourt_mobile_DC_stateWebService.php.txt  [717] Response - app.ecourts.gov.in_ecourt_mobile_DC_stateWebService.php.txt  [718] Request - app.ecourts.gov.in_ecourt_mobile_DC_getAllLabelsWebService.php.txt  [719] Response - app.ecourts.gov.in_ecourt_mobile_DC_districtWebService.php.txt  [720] Request - app.ecourts.gov.in_ecourt_mobile_DC_courtEstWebService.php.txt  [720] Response - app.ecourts.gov.in_ecourt_mobile_DC_courtEstWebService.php.txt  [721] Request - app.ecourts.gov.in_ecourt_mobile_DC_courtNameWebService.php.txt  [721] Response - app.ecourts.gov.in_ecourt_mobile_DC_courtNameWebService.php.txt  [745] Request - app.ecourts.gov.in_ecourt_mobile_DC_caseNumberWebService.php.txt  [747] Response - app.ecourts.gov.in_ecourt_mobile_DC_searchByCaseType.php.txt  (+4 more)
web/: download.py  scrape_courts.py  (+5 more)
(+17 files in other folders)
